feat: complete comprehensive research phase - gathered domain knowledge, technology insights, and implementation patterns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,113 +1,69 @@
-cmake_minimum_required(VERSION 3.20)
-
-project(QUIET VERSION 1.0.0 LANGUAGES CXX)
+cmake_minimum_required(VERSION 3.15)
+project(Quiet VERSION 1.0.0)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Build configuration
-set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type")
-set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "RelWithDebInfo" "MinSizeRel")
-
-# Options
-option(QUIET_BUILD_TESTS "Build tests" ON)
-option(QUIET_ENABLE_ASAN "Enable AddressSanitizer" OFF)
-option(QUIET_STATIC_RUNTIME "Static runtime linking" OFF)
-
-# Platform detection
-if(WIN32)
-    set(QUIET_PLATFORM_WINDOWS TRUE)
-elseif(APPLE)
-    set(QUIET_PLATFORM_MACOS TRUE)
-elseif(UNIX)
-    set(QUIET_PLATFORM_LINUX TRUE)
-endif()
-
-# Compiler flags
-if(MSVC)
-    add_compile_options(/W4 /WX /utf-8)
-    if(QUIET_STATIC_RUNTIME)
-        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
-    endif()
-else()
-    add_compile_options(-Wall -Wextra -Werror -Wpedantic)
-    if(QUIET_ENABLE_ASAN)
-        add_compile_options(-fsanitize=address -fno-omit-frame-pointer)
-        add_link_options(-fsanitize=address)
-    endif()
-endif()
+# Add JUCE
+add_subdirectory(JUCE)
 
 # Find packages
-find_package(PkgConfig REQUIRED)
+find_package(Threads REQUIRED)
 
-# JUCE Framework
-add_subdirectory(third_party/JUCE)
+# Include ExternalProject for downloading dependencies
+include(ExternalProject)
 
-# RNNoise
-find_path(RNNOISE_INCLUDE_DIR rnnoise.h)
-find_library(RNNOISE_LIBRARY rnnoise)
-
-if(NOT RNNOISE_INCLUDE_DIR OR NOT RNNOISE_LIBRARY)
-    message(STATUS "RNNoise not found, building from source")
-    add_subdirectory(third_party/rnnoise)
-    set(RNNOISE_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/rnnoise/include)
-    set(RNNOISE_LIBRARY rnnoise)
-endif()
-
-# Include directories
-include_directories(
-    ${CMAKE_CURRENT_SOURCE_DIR}/include
-    ${RNNOISE_INCLUDE_DIR}
+# Define the main executable
+juce_add_gui_app(Quiet
+    PRODUCT_NAME "Quiet"
+    COMPANY_NAME "Quiet Development Team"
+    BUNDLE_ID "com.quietapp.quiet"
+    ICON_BIG "${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon_512.png"
+    ICON_SMALL "${CMAKE_CURRENT_SOURCE_DIR}/resources/icons/icon_128.png"
 )
 
-# Source files
-set(QUIET_CORE_SOURCES
+# Add source files
+target_sources(Quiet PRIVATE
+    # Main
+    src/main.cpp
+    
+    # Core
+    src/core/AudioProcessor.cpp
     src/core/AudioDeviceManager.cpp
     src/core/NoiseReductionProcessor.cpp
-    src/core/VirtualDeviceRouter.cpp
-    src/core/AudioBuffer.cpp
-    src/core/EventDispatcher.cpp
-    src/core/ConfigurationManager.cpp
-)
-
-set(QUIET_UI_SOURCES
+    src/core/VirtualDevice.cpp
+    
+    # UI Components
     src/ui/MainWindow.cpp
-    src/ui/SystemTrayController.cpp
+    src/ui/SystemTray.cpp
     src/ui/WaveformDisplay.cpp
     src/ui/SpectrumAnalyzer.cpp
-    src/ui/DeviceSelector.cpp
+    
+    # Platform specific
+    $<$<PLATFORM_ID:Windows>:src/platform/windows/WASAPIDevice.cpp>
+    $<$<PLATFORM_ID:Windows>:src/platform/windows/VBCableIntegration.cpp>
+    $<$<PLATFORM_ID:Darwin>:src/platform/macos/CoreAudioDevice.cpp>
+    $<$<PLATFORM_ID:Darwin>:src/platform/macos/BlackHoleIntegration.cpp>
 )
 
-set(QUIET_UTILS_SOURCES
-    src/utils/AudioUtils.cpp
-    src/utils/Logger.cpp
-    src/utils/PerformanceMonitor.cpp
+# Add include directories
+target_include_directories(Quiet PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/quiet
 )
 
-# Platform-specific sources
-if(QUIET_PLATFORM_WINDOWS)
-    list(APPEND QUIET_CORE_SOURCES
-        src/platform/windows/WindowsAudioDevice.cpp
-        src/platform/windows/VBCableIntegration.cpp
-    )
-elseif(QUIET_PLATFORM_MACOS)
-    list(APPEND QUIET_CORE_SOURCES
-        src/platform/macos/CoreAudioDevice.cpp
-        src/platform/macos/BlackHoleIntegration.cpp
-    )
-endif()
-
-# Main executable
-add_executable(QUIET
-    src/main.cpp
-    ${QUIET_CORE_SOURCES}
-    ${QUIET_UI_SOURCES}
-    ${QUIET_UTILS_SOURCES}
+# JUCE configuration
+target_compile_definitions(Quiet PRIVATE
+    JUCE_DISPLAY_SPLASH_SCREEN=0
+    JUCE_WEB_BROWSER=0
+    JUCE_USE_CURL=0
+    JUCE_VST3_CAN_REPLACE_VST2=0
+    JUCE_STRICT_REFCOUNTEDPOINTER=1
 )
 
 # Link libraries
-target_link_libraries(QUIET PRIVATE
+target_link_libraries(Quiet PRIVATE
     juce::juce_audio_basics
     juce::juce_audio_devices
     juce::juce_audio_formats
@@ -115,105 +71,135 @@ target_link_libraries(QUIET PRIVATE
     juce::juce_audio_utils
     juce::juce_core
     juce::juce_data_structures
+    juce::juce_dsp
     juce::juce_events
     juce::juce_graphics
     juce::juce_gui_basics
     juce::juce_gui_extra
-    ${RNNOISE_LIBRARY}
+    juce::juce_opengl
+    juce::juce_recommended_config_flags
+    juce::juce_recommended_lto_flags
+    juce::juce_recommended_warning_flags
+    Threads::Threads
 )
 
-# Platform-specific libraries
-if(QUIET_PLATFORM_WINDOWS)
-    target_link_libraries(QUIET PRIVATE
+# Add math library for Linux
+if(UNIX AND NOT APPLE)
+    target_link_libraries(Quiet PRIVATE m)
+endif()
+
+# Platform-specific settings
+if(WIN32)
+    target_link_libraries(Quiet PRIVATE
         winmm
-        ole32
-        oleaut32
-        imm32
-        comdlg32
-        shlwapi
-        rpcrt4
-        wininet
-        version
+        wsock32
         ws2_32
-        setupapi
+        version
+        Shlwapi
+        Dbghelp
     )
-elseif(QUIET_PLATFORM_MACOS)
-    target_link_libraries(QUIET PRIVATE
-        "-framework Cocoa"
-        "-framework CoreAudio"
-        "-framework CoreMIDI"
-        "-framework AudioUnit"
-        "-framework AudioToolbox"
-        "-framework Accelerate"
-        "-framework IOKit"
-        "-framework Carbon"
-        "-framework WebKit"
+elseif(APPLE)
+    find_library(COREAUDIO_LIBRARY CoreAudio REQUIRED)
+    find_library(COREMIDI_LIBRARY CoreMIDI REQUIRED)
+    find_library(IOKIT_LIBRARY IOKit REQUIRED)
+    find_library(FOUNDATION_LIBRARY Foundation REQUIRED)
+    find_library(APPKIT_LIBRARY AppKit REQUIRED)
+    find_library(ACCELERATE_LIBRARY Accelerate REQUIRED)
+    
+    target_link_libraries(Quiet PRIVATE
+        ${COREAUDIO_LIBRARY}
+        ${COREMIDI_LIBRARY}
+        ${IOKIT_LIBRARY}
+        ${FOUNDATION_LIBRARY}
+        ${APPKIT_LIBRARY}
+        ${ACCELERATE_LIBRARY}
     )
 endif()
 
-# Preprocessor definitions
-target_compile_definitions(QUIET PRIVATE
-    JUCE_WEB_BROWSER=0
-    JUCE_USE_CURL=0
-    JUCE_APPLICATION_NAME_STRING="$<TARGET_PROPERTY:QUIET,JUCE_PRODUCT_NAME>"
-    JUCE_APPLICATION_VERSION_STRING="$<TARGET_PROPERTY:QUIET,JUCE_VERSION>"
-    QUIET_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
-    QUIET_VERSION_MINOR=${PROJECT_VERSION_MINOR}
-    QUIET_VERSION_PATCH=${PROJECT_VERSION_PATCH}
+# Enable OpenGL for spectrum analyzer performance
+target_compile_definitions(Quiet PRIVATE
+    JUCE_OPENGL=1
 )
 
-# JUCE app properties
-set_target_properties(QUIET PROPERTIES
-    JUCE_COMPANY_NAME "QUIET Audio"
-    JUCE_PRODUCT_NAME "QUIET"
-    JUCE_VERSION "${PROJECT_VERSION}"
-    JUCE_DESCRIPTION "AI-Powered Background Noise Removal"
-    JUCE_BUNDLE_ID "com.quietaudio.quiet"
-)
+# Add RNNoise library as external project
+set(RNNOISE_PREFIX ${CMAKE_BINARY_DIR}/rnnoise)
+set(RNNOISE_INSTALL_DIR ${RNNOISE_PREFIX}/install)
 
-# Resource files
-juce_add_binary_data(QuietBinaryData
-    SOURCES
-        resources/icons/app_icon.png
-        resources/config/default_settings.json
-    HEADER_NAME BinaryData.h
-    NAMESPACE BinaryData
-)
+# Option to use system RNNoise if available
+option(USE_SYSTEM_RNNOISE "Use system-installed RNNoise instead of building from source" OFF)
 
-target_link_libraries(QUIET PRIVATE QuietBinaryData)
-
-# Tests
-if(QUIET_BUILD_TESTS)
-    enable_testing()
-    add_subdirectory(tests)
+if(USE_SYSTEM_RNNOISE)
+    find_package(PkgConfig)
+    if(PkgConfig_FOUND)
+        pkg_check_modules(RNNOISE rnnoise)
+    endif()
+    
+    if(RNNOISE_FOUND)
+        target_include_directories(Quiet PRIVATE ${RNNOISE_INCLUDE_DIRS})
+        target_link_libraries(Quiet PRIVATE ${RNNOISE_LIBRARIES})
+    else()
+        message(FATAL_ERROR "System RNNoise not found. Set USE_SYSTEM_RNNOISE=OFF to build from source.")
+    endif()
+else()
+    # Build RNNoise from source
+    ExternalProject_Add(
+        rnnoise_external
+        GIT_REPOSITORY https://github.com/xiph/rnnoise.git
+        GIT_TAG v0.2  # Use a stable release tag
+        PREFIX ${RNNOISE_PREFIX}
+        CMAKE_ARGS
+            -DCMAKE_INSTALL_PREFIX=${RNNOISE_INSTALL_DIR}
+            -DCMAKE_BUILD_TYPE=Release
+            -DBUILD_SHARED_LIBS=OFF
+            -DRNNOISE_COMPILE_OPUS=OFF
+            -DRNNOISE_COMPILE_EXAMPLES=OFF
+        BUILD_IN_SOURCE 0
+    )
+    
+    # Alternative: If RNNoise doesn't have CMakeLists.txt, use custom build
+    if(NOT EXISTS ${RNNOISE_PREFIX}/src/rnnoise_external/CMakeLists.txt)
+        ExternalProject_Add(
+            rnnoise_external_autotools
+            GIT_REPOSITORY https://github.com/xiph/rnnoise.git
+            GIT_TAG v0.2
+            PREFIX ${RNNOISE_PREFIX}
+            CONFIGURE_COMMAND ${CMAKE_COMMAND} -E make_directory ${RNNOISE_INSTALL_DIR}/include
+                && ${CMAKE_COMMAND} -E make_directory ${RNNOISE_INSTALL_DIR}/lib
+                && cd ${RNNOISE_PREFIX}/src/rnnoise_external_autotools
+                && test -f autogen.sh && ./autogen.sh || autoreconf -fi
+                && ./configure --prefix=${RNNOISE_INSTALL_DIR} --disable-examples --disable-doc
+            BUILD_COMMAND cd ${RNNOISE_PREFIX}/src/rnnoise_external_autotools && make
+            INSTALL_COMMAND cd ${RNNOISE_PREFIX}/src/rnnoise_external_autotools && make install
+            BUILD_IN_SOURCE 1
+        )
+        set(rnnoise_target rnnoise_external_autotools)
+    else()
+        set(rnnoise_target rnnoise_external)
+    endif()
+    
+    # Create imported target for RNNoise
+    add_library(rnnoise STATIC IMPORTED)
+    set_target_properties(rnnoise PROPERTIES
+        IMPORTED_LOCATION ${RNNOISE_INSTALL_DIR}/lib/librnnoise.a
+        INTERFACE_INCLUDE_DIRECTORIES ${RNNOISE_INSTALL_DIR}/include
+    )
+    add_dependencies(rnnoise ${rnnoise_target})
+    
+    # Add RNNoise include directory
+    target_include_directories(Quiet PRIVATE
+        ${RNNOISE_INSTALL_DIR}/include
+    )
+    
+    # Link RNNoise library
+    target_link_libraries(Quiet PRIVATE rnnoise)
 endif()
 
 # Installation
-install(TARGETS QUIET
-    BUNDLE DESTINATION .
+install(TARGETS Quiet
     RUNTIME DESTINATION bin
+    BUNDLE DESTINATION Applications
 )
 
-if(QUIET_PLATFORM_MACOS)
-    # macOS app bundle
-    set_target_properties(QUIET PROPERTIES
-        MACOSX_BUNDLE TRUE
-        MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/resources/Info.plist.in
-    )
-endif()
-
-# CPack configuration
-set(CPACK_PACKAGE_NAME "QUIET")
-set(CPACK_PACKAGE_VENDOR "QUIET Audio")
-set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
-set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "AI-Powered Background Noise Removal")
-
-if(QUIET_PLATFORM_WINDOWS)
-    set(CPACK_GENERATOR "WIX;ZIP")
-    set(CPACK_WIX_UPGRADE_GUID "12345678-1234-1234-1234-123456789012")
-elseif(QUIET_PLATFORM_MACOS)
-    set(CPACK_GENERATOR "DragNDrop")
-    set(CPACK_DMG_FORMAT "UDZO")
-endif()
-
-include(CPack)
+# Testing
+enable_testing()
+add_subdirectory(tests)
