--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,14 +16,25 @@ set(TEST_SOURCES
     unit/AudioBufferTest.cpp
     unit/NoiseReductionProcessorTest.cpp
     unit/AudioDeviceManagerTest.cpp
+    unit/VirtualDeviceRouterTest.cpp
     unit/EventDispatcherTest.cpp
     integration/AudioPipelineTest.cpp
     integration/UIIntegrationTest.cpp
     TestUtils.cpp
 )
 
+# Core sources needed for tests
+set(QUIET_CORE_SOURCES_FOR_TESTS
+    ${CMAKE_SOURCE_DIR}/src/core/AudioBuffer.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/AudioDeviceManager.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/NoiseReductionProcessor.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/VirtualDeviceRouter.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/EventDispatcher.cpp
+    ${CMAKE_SOURCE_DIR}/src/core/ConfigurationManager.cpp
+)
+
 # Test executable
-add_executable(QuietTests ${TEST_SOURCES})
+add_executable(QuietTests ${TEST_SOURCES} ${QUIET_CORE_SOURCES_FOR_TESTS})
 
 target_link_libraries(QuietTests PRIVATE
     gtest
@@ -32,7 +43,9 @@ target_link_libraries(QuietTests PRIVATE
     gmock_main
     juce::juce_audio_basics
     juce::juce_audio_devices
+    juce::juce_audio_formats
     juce::juce_core
+    juce::juce_events
     ${RNNOISE_LIBRARY}
 )
 
@@ -46,6 +59,18 @@ target_compile_definitions(QuietTests PRIVATE
     JUCE_APPLICATION_NAME_STRING="QuietTests"
     JUCE_APPLICATION_VERSION_STRING="1.0.0"
 )
+
+# Platform-specific libraries for tests
+if(WIN32)
+    target_link_libraries(QuietTests PRIVATE
+        winmm ole32 oleaut32 uuid
+    )
+elseif(APPLE)
+    target_link_libraries(QuietTests PRIVATE
+        "-framework CoreAudio"
+        "-framework AudioToolbox"
+    )
+endif()
 
 # Discover tests
 include(GoogleTest)
